# Nobles_and_Peasants

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
Nobles_and_Peasants/: Nobles_and_Peasants.db  Nobles_and_Peasants.py  __init__.py  app.py  auth.py  challenges.py  constants.py  db.py  default_values.sql  drinks.py  flask_test.db  game.py  login.sql  main.py  nap_helpers.py  notes.txt  outlaws.py  parties.py  players.py  query.py  quest_rewards.py  quests.py  schema.sql  starting_coin.py
Nobles_and_Peasants/static/: style.css
Nobles_and_Peasants/templates/: how_to_play.html  kill.html  layout.html  login.html  main.html  quest.html  rules.html  setup.html  setup_advanced.html  show_kingdom.html  show_leaderboard.html  welcome.html  what_is_this.html
flask_test/: __init__.py  flask_test.db  flask_test.py
flask_test.egg-info/: PKG-INFO  SOURCES.txt
flask_test/templates/: layout.html  main.html  rules.html  welcome.html
nobles_and_peasants/: auth.py  challenges.py  db.py  drinks.py  game.py  outlaws.py  parties.py  players.py  query.py  quest_rewards.py  quests.py  starting_coin.py
nobles_and_peasants/static/: style.css
nobles_and_peasants/templates/: layout.html  main.html  quest.html  setup.html  show_kingdom.html  show_leaderboard.html  what_is_this.html
tempdir/: __init__.py  default_values.sql
tempdir/templates/: login.html  setup.html
tests/: conftest.py  test_auth.py  test_data.sql  test_db.py  test_factory.py
