[tool.poetry]
name = "nobles_and_peasants"
version = "0.1.0"
description = "Nobles have the coin. Peasants have the power."
authors = ["mfrasco <mfrasco6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-Login = "^0.6.3"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
pytest = "^7.4.3"
coverage = "^7.3.2"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
